--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -44,10 +44,9 @@ ls -l : 디렉토리까지만 보여줌.
 
 ll : 디렉토리안에 있는 파일까지 보여줌.
 
-
 /home/ubuntu : home 디렉토리(~)
 
 절대경로 : / 부터 시작
-상대경로 : / 없이 시작(. : 현재디텍토리, .. : 이전디렉토리)
+상대경로 : / 없이 시작(. : 현재디텍토리, .. : 상위디렉토리)
 
 
