--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -55,3 +55,11 @@ nano :  텍스트 파일을 생성하고 편집
 
 mkdir : 폴더생성
 
+rmdir : 폴더삭제
+
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/a118eac0-60f9-4e70-ba3e-ae75e774711c)
+
+
+
+
+
