--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -59,6 +59,10 @@ rmdir : 폴더삭제
 
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/a118eac0-60f9-4e70-ba3e-ae75e774711c)
 
+비어있는 폴더도 강제삭제 가능
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/a6ae18dd-df59-4c52-9ff9-abf82a8c5832)
+
+
 
 
 
