--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -62,6 +62,12 @@ rmdir : 폴더삭제
 디렉토리 강제삭제
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/a6ae18dd-df59-4c52-9ff9-abf82a8c5832)
 
+cat : 파일출력
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/5a0293a1-6fd7-49b1-a4fd-d66a707c91a0)
+
+cat -n : 줄번호까지 출력
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/827dc24d-abe6-4e3f-9c71-a69cf908297f)
+
 
 
 
