--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -68,6 +68,9 @@ cat : 파일출력
 cat -n : 줄번호까지 출력
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/827dc24d-abe6-4e3f-9c71-a69cf908297f)
 
+more : 화면단위 출력
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/9b74c530-262b-4866-b05d-ceeab28ceab9)
+
 
 
 
