--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -71,6 +71,19 @@ cat -n : 줄번호까지 출력
 more : 화면단위 출력
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/9b74c530-262b-4866-b05d-ceeab28ceab9)
 
+less : more 확장판(q:빠져나오기)
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/cb0dc186-c284-4dd8-a660-92abc7de0414)
+
+ex) /null : null 찾기
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/696969ef-44df-40ea-80a8-a29165e0dd36)
+
+
+
+tail : cat의 반대
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/e942a99c-630b-4344-9a91-64b61ff5b9ec)
+
+
+
 
 
 
