--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -80,6 +80,18 @@ ex) /null : null 찾기
 tail : cat의 반대
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/e942a99c-630b-4344-9a91-64b61ff5b9ec)
 
+우분투 ssh터미널 접속 설정 putty 연결하기
+
+apt-get update
+apt-get upgrade
+
+apt install net-tools
+
+ifconfig
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/bd0c4171-8210-4430-8b30-e09caabc3a7a)
+
+
+
 
 
 
