--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -90,7 +90,8 @@ apt install net-tools
 ifconfig
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/bd0c4171-8210-4430-8b30-e09caabc3a7a)
 
-
+putty.exe (the SSH and Telnet client itself)
+64-bit x86: putty.exe 다운로드
 
 
 
