--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -93,6 +93,14 @@ ifconfig
 putty.exe (the SSH and Telnet client itself)
 64-bit x86: putty.exe 다운로드
 
+cp : 파일복사
+
+mv : 파일이동, 파일이름 변경
+
+
+
+
+
 
 
 
