--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -103,7 +103,11 @@ echo : 모니터 출력
 
 echo 문자열 > 파일명 : 문자열이 들어간 파일명의 파일이 생성
 
-ln : 링크(하드링크 소프트링크 바로가기)
+ln : 링크 = 하드링크(원본파일 삭제 시에도 남아 있음), 심볼릭링크(원본파일이 삭제되면 링크가 끊어짐)
+
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/4ec27c8c-8c4f-4901-ba61-d8a937e3487c)
+
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/0b7269b9-9758-4d58-8d72-abc8ad7ca0b3)
 
 
 
