--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -116,8 +116,6 @@ grep => 검색(파일내용검색)
 grep 명령으로 /etc/services 파일에서 문자열 ‘NETBIOS’가 있는 행을 찾아 행 번호와 함께 출력하기
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/350b7424-d9b4-419b-9ba5-fbecad2c45c0)
 
-
-   
 find /tmp -user ubuntu -exec rm {} \;
 
 1. /tmp 안에 data1 data2 를 만든 후 
@@ -125,6 +123,16 @@ find /tmp -user ubuntu -exec rm {} \;
 2. /home/ubuntu 로 이동 후
 
 3. find 명령으로 /tmp 안에 우분투 소유의 파일을 모두 지우시오.
+
+find명령으로 홈 디렉터리에서 파일명이 test인 파일을 찾아 /tmp 디렉터리로 이동하
+find ~ -name test -exec mv {} /tmp \;
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/43590eac-a193-43cc-8770-c2ccde8605ec)
+
+vi : 문서편집기
+i => 입력모드
+esc => 입력모드에서 빠져나오기
+:wq => vi 문서편집기에서 빠져나오기
+
 
  
 
