--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -132,7 +132,9 @@ vi : 문서편집기
 i => 입력모드
 esc => 입력모드에서 빠져나오기
 :wq => vi 문서편집기에서 빠져나오기
+:wq! => 저장하고 빠져나오기
 
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/1c70e689-e084-4d57-ba48-45252836a056)
 
  
 
