--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -137,6 +137,11 @@ esc => 입력모드에서 빠져나오기
 
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/1c70e689-e084-4d57-ba48-45252836a056)
 
+명령모드에서 편집모드로 i/o/a
+
+o=> 해당커서에서 개행
+
+
  
 
 
