--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -146,6 +146,11 @@ esc => 입력모드에서 빠져나오기
 
 o=> 해당커서에서 개행
 
+- 쉘
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/5ac6b743-e020-4992-954e-1b8e95b9c672)
+
+
+
 
  
 
