--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -149,6 +149,9 @@ o=> 해당커서에서 개행
 - 쉘
 <br> ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/5ac6b743-e020-4992-954e-1b8e95b9c672)
 
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/a3a20a54-dbde-479c-b14d-c03f83332924)
+
+
 
 
 
