--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -151,6 +151,12 @@ o=> 해당커서에서 개행
 
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/a3a20a54-dbde-479c-b14d-c03f83332924)
 
+? -> 해당글자
+[] -> 글자 중에 하나 -> or
+* -> all
+
+파일명이 영문자로 시작하고, 숫자로 끝나는 모든 파일 출력
+
 
 
 
