--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -156,6 +156,7 @@ o=> 해당커서에서 개행
 * -> all
 
 파일명이 영문자로 시작하고, 숫자로 끝나는 모든 파일 출력
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/2802f952-a3b1-48de-aaa0-7c531f6050cc)
 
 
 
