--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -159,6 +159,10 @@ o=> 해당커서에서 개행
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/2802f952-a3b1-48de-aaa0-7c531f6050cc)
 
 
+echo $PS1
+
+
+
 
 
 
