--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -161,6 +161,23 @@ o=> 해당커서에서 개행
 
 echo $PS1
 
+vi /etc/profile.d/prompt.sh
+
+vi편집기
+
+esc => 작업선택
+
+i => insert
+
+x => delete
+
+wq => vi편집기 빠져나오기
+
+wq! => 저장하고 vi편집기 빠져나오기
+
+
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/2d019d7c-3a30-4321-94ba-93f29364ba62)
+
 
 
 
