--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -178,7 +178,8 @@ wq! => 저장하고 vi편집기 빠져나오기
 
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/2d019d7c-3a30-4321-94ba-93f29364ba62)
 
-
+파일 접근 권한 확인 
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/94e41641-ce92-4fad-9643-4bf8b035c1d4)
 
 
 
