--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -181,6 +181,7 @@ wq! => 저장하고 vi편집기 빠져나오기
 파일 접근 권한 확인 
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/94e41641-ce92-4fad-9643-4bf8b035c1d4)
 
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/c2574408-f2d0-40c6-b142-089e96758229)
 
 
 
