--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -183,6 +183,8 @@ wq! => 저장하고 vi편집기 빠져나오기
 
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/c2574408-f2d0-40c6-b142-089e96758229)
 
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/2ed33283-bd44-4d32-9a29-f0369d5ee526)
+
 
 
 
