--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -186,6 +186,12 @@ wq! => 저장하고 vi편집기 빠져나오기
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/2ed33283-bd44-4d32-9a29-f0369d5ee526)
 
 
+사용자 계정 정보
+cat /etc/passwd
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/0afaaeff-3b94-4ff0-a693-71fdba6c8052)
+
+
+
 
 
 
