--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -188,6 +188,8 @@ wq! => 저장하고 vi편집기 빠져나오기
 
 사용자 계정 정보
 cat /etc/passwd
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/4aac5dbb-030a-427c-844a-ba329120f424)
+
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/0afaaeff-3b94-4ff0-a693-71fdba6c8052)
 
 
