--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -193,6 +193,7 @@ cat /etc/passwd
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/0afaaeff-3b94-4ff0-a693-71fdba6c8052)
 
 
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/8695a325-49bd-4bfc-8500-b27ccc5e5199)
 
 
 
