--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -195,7 +195,9 @@ cat /etc/passwd
 
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/8695a325-49bd-4bfc-8500-b27ccc5e5199)
 
+su - root => root로
 
+whoami => 자기자신 확인
 
 
  
