--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -201,9 +201,11 @@ whoami => 자기자신 확인
 
 기본 설정 값 확인하기:-D 옵션
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/364e4495-2558-4b68-8f83-70075197c521)
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/b5d2eb2e-537b-47e7-9788-7a656ed267f9)
 
 /bin/sh -> 본쉘 
 /bin/bash -> history 기능 등등
+
 
 
 
