--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -206,6 +206,10 @@ whoami => 자기자신 확인
 /bin/sh -> 본쉘 
 /bin/bash -> history 기능 등등
 
+기본 설정값은 /etc/default/useradd 파일에 저장
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/1ce7e6cb-3658-45c4-a2af-4ba860dbc7e2)
+
+
 
 
 
