--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -209,7 +209,10 @@ whoami => 자기자신 확인
 기본 설정값은 /etc/default/useradd 파일에 저장
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/1ce7e6cb-3658-45c4-a2af-4ba860dbc7e2)
 
-
+<hr>
+계정생성 명령어
+- useradd
+- adduser
 
 
 
