--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -214,6 +214,10 @@ whoami => 자기자신 확인
 - useradd
 - adduser
 
+user5 계정생성
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/2954c80f-a464-44ff-b985-3affb2386947)
+
+
 
 
 
