--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -217,6 +217,9 @@ whoami => 자기자신 확인
 user5 계정생성
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/2954c80f-a464-44ff-b985-3affb2386947)
 
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/4e59f1c7-2dac-4e41-b6e7-76091bfd4669)
+
+
 
 
 
