--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -219,7 +219,9 @@ user5 계정생성
 
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/4e59f1c7-2dac-4e41-b6e7-76091bfd4669)
 
-
+기본 설정 값 확인하기 
+adduser 명령의 기본 설정은 /etc/adduser.conf에 저장
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/ffde9c61-c3ed-4dd8-9c2a-31bedeac6dc4)
 
 
 
