--- a/리눅스명령어.md
+++ b/리눅스명령어.md
@@ -223,6 +223,8 @@ user5 계정생성
 adduser 명령의 기본 설정은 /etc/adduser.conf에 저장
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/ffde9c61-c3ed-4dd8-9c2a-31bedeac6dc4)
 
+![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/f138eda4-728e-42e8-9a6f-37d06cc4caf3)
+
 ![image](https://github.com/welcomeglory/UBUNTU/assets/153584777/2e1e732b-048f-44ff-a1ae-c511a9eb1474)
 
 
